--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.7",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
     "@nestjs/platform-express": "^10.4.7",
-    "reflect-metadata": "^0.2.2"
+    "@nestjs/swagger": "^8.0.5",
+    "graphql-request": "^7.1.2",
+    "reflect-metadata": "^0.2.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
     "build": "nest build",
