feat(README.md): update app configuration to use HTTPS for THREADS_REDIRECT_URI and add detailed instructions for running app with HTTPS in development mode feat(README.md): improve authentication flow section by simplifying steps and updating endpoint URLs to use HTTPS feat(README.md): add development section with commands for running app locally and with Docker feat(README.md): update API documentation section with correct Swagger UI URL and instructions for accessing the API with HTTPS feat(docker-compose.yml): add healthchecks for services to monitor their availability and improve reliability feat(src/app.controller.ts): add health endpoint to provide status information about the app feat(src/threads/threads.service.ts): refactor makeRequest method to include custom headers for requests feat(src/threads/threads.service.ts): update exchangeCodeForToken method to use makeRequest for fetching access token and handle tunnel authentication errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,28 @@ services:
       - .:/app
       - /app/node_modules
     command: bun run start:dev
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "http://localhost:3000/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   localtunnel:
-    image: efrecon/localtunnel
+    image: node:18-alpine
     depends_on:
       - api
-    command: --port 3000 --subdomain your-subdomain
+    command: >
+      sh -c "
+        echo 'Getting tunnel password...' &&
+        npm install -g localtunnel &&
+        TUNNEL_PASSWORD=$$(wget -q -O - https://loca.lt/mytunnelpassword) &&
+        echo '\n🔑 Tunnel Password: '$$TUNNEL_PASSWORD'\n' &&
+        lt --port 3000 --subdomain threads-bot-api --print-requests"
+    restart: unless-stopped
+    environment:
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "https://threads-bot-api.loca.lt" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
