feat(alerts.yml): add Prometheus alerting rules for ThreadsBotAPI to monitor high error rates, tunnel disconnections, expiring tokens, and rate limits feat(package.json): add new dependencies for @nestjs/event-emitter, @nestjs/schedule, axios, and localtunnel feat(deploy.sh): create deployment script with environment validation, dependency checks, application build, deployment, and health checks feat(rollback.sh): create rollback script with functions to get last stable version, perform rollback, check health, and cleanup old backups refactor(app.module.ts): reorganize imports and add TunnelModule to AppModule for better organization and readability

--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^8.0.5",
+    "axios": "^1.7.7",
     "graphql-request": "^7.1.2",
+    "localtunnel": "^2.0.2",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.1"
   },
@@ -31,6 +35,10 @@
     "start:dev": "bun --watch src/main.ts",
     "start:debug": "bun --inspect-brk src/main.ts",
     "start:prod": "bun dist/main.js",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "deploy:prod": "DEPLOY_ENV=production ./scripts/deploy.sh",
+    "deploy:staging": "DEPLOY_ENV=staging ./scripts/deploy.sh",
+    "monitor:tunnel": "bun run start:monitor",
+    "update:meta": "bun run meta:update"
   }
 }
