--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: ghcr.io/${GITHUB_REPOSITORY}/threads-bot-api:${IMAGE_TAG:-latest}
     restart: unless-stopped
     ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      # Add other environment variables as needed
+      - "80:3000"
+      - "443:3000" # If you'll use HTTPS
+    env_file:
+      - .env.production
     volumes:
       - ./data:/app/data
