refactor(.github/workflows/main.yml): update SSH credentials in deployment workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,17 @@ jobs:
           DEPLOY_IMAGE: ghcr.io/${{ github.repository }}/threads-bot-api:${{ github.sha }}
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 391
           envs: DEPLOY_IMAGE
+          debug: true
           script: |
+            echo "Starting deployment..."
             docker pull $DEPLOY_IMAGE
             docker compose down
             IMAGE_TAG=${{ github.sha }} docker compose up -d
+            echo "Deployment complete"
 
       - name: Smoke test
         run: |
@@ -57,8 +61,9 @@ jobs:
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 391
           script: |
             docker compose down
             IMAGE_TAG=latest docker compose up -d
