--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,16 +46,14 @@ jobs:
           envs: DEPLOY_IMAGE,GITHUB_REPOSITORY
           debug: true
           script: |
-            bash -c '
             echo "Starting deployment..."
             
-            # Create docker-compose.yml if it doesn't exist
-            cat > docker-compose.yml << EOL
-            version: '"'"'3.8'"'"'
-            
+            # Create temporary file
+            echo 'version: "3.8"
+
             services:
               api:
-                image: ghcr.io/${GITHUB_REPOSITORY}/threads-bot-api:\${IMAGE_TAG:-latest}
+                image: ghcr.io/${GITHUB_REPOSITORY}/threads-bot-api:${IMAGE_TAG:-latest}
                 restart: unless-stopped
                 ports:
                   - "3000:3000"
@@ -65,15 +63,13 @@ jobs:
                   test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
                   interval: 30s
                   timeout: 10s
-                  retries: 3
-            EOL
+                  retries: 3' > docker-compose.yml
             
             echo "Pulling image: $DEPLOY_IMAGE"
             docker pull "$DEPLOY_IMAGE"
             docker compose down
             IMAGE_TAG=${{ github.sha }} docker compose up -d
             echo "Deployment complete"
-            '
 
       - name: Create smoke test script
         run: |
