--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,24 +50,41 @@ jobs:
             /bin/bash -c '
             echo "Starting deployment..."
             
-            # Thorough cleanup of existing containers and processes
+            # Function to kill process on port 3000
+            kill_port_3000() {
+              echo "Attempting to kill process on port 3000..."
+              
+              # Try lsof
+              if command -v lsof >/dev/null 2>&1; then
+                lsof -ti:3000 | xargs -r kill -9 || true
+              fi
+              
+              # Try ss
+              if command -v ss >/dev/null 2>&1; then
+                pid=$(ss -lptn "sport = :3000" | grep -oP "(?<=pid=)\d+" || true)
+                if [ ! -z "$pid" ]; then
+                  kill -9 $pid || true
+                fi
+              fi
+              
+              # Try netstat as last resort
+              if command -v netstat >/dev/null 2>&1; then
+                pid=$(netstat -tlnp 2>/dev/null | grep ":3000" | awk "{print \$7}" | cut -d"/" -f1)
+                if [ ! -z "$pid" ]; then
+                  kill -9 $pid || true
+                fi
+              fi
+            }
+            
+            # Thorough cleanup
             echo "Cleaning up existing containers and processes..."
             docker compose down --remove-orphans || true
             docker rm -f $(docker ps -aq) || true
-            
-            # Kill processes on port 3000 without requiring sudo password
-            if command -v fuser >/dev/null 2>&1; then
-              fuser -k 3000/tcp || true
-            else
-              # Alternative approach using netstat and kill
-              pid=$(netstat -tlnp 2>/dev/null | grep ":3000" | awk "{print \$7}" | cut -d"/" -f1)
-              if [ ! -z "$pid" ]; then
-                kill -9 $pid || true
-              fi
-            fi
+            kill_port_3000
             
             # Wait for port to be released
-            sleep 5
+            echo "Waiting for port to be released..."
+            sleep 10
             
             # Create docker-compose.yml
             cat > docker-compose.yml << "EOF"
@@ -95,9 +112,13 @@ jobs:
             # Try to start container, with retries
             for attempt in $(seq 1 3); do
               echo "Starting container (attempt $attempt)..."
+              kill_port_3000
+              sleep 5
+              
               if IMAGE_TAG=$SHA docker compose up -d; then
                 break
               fi
+              
               echo "Start failed, cleaning up and retrying..."
               docker compose down --remove-orphans
               sleep 5
