--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,29 +50,27 @@ jobs:
             /bin/bash -c '
             echo "Starting deployment..."
             
+            # Debug: Show processes using port 3000
+            echo "Checking processes on port 3000..."
+            ps aux | grep 3000 || true
+            netstat -tulpn 2>/dev/null | grep :3000 || true
+            ss -tulpn | grep :3000 || true
+            
             # Function to kill process on port 3000
             kill_port_3000() {
               echo "Attempting to kill process on port 3000..."
               
-              # Try lsof
-              if command -v lsof >/dev/null 2>&1; then
-                lsof -ti:3000 | xargs -r kill -9 || true
+              # Try fuser with sudo (non-interactive)
+              if command -v fuser >/dev/null 2>&1; then
+                echo "Using fuser to kill process..."
+                echo ${{ secrets.SSH_PASSWORD }} | sudo -S fuser -k 3000/tcp || true
               fi
               
-              # Try ss
-              if command -v ss >/dev/null 2>&1; then
-                pid=$(ss -lptn "sport = :3000" | grep -oP "(?<=pid=)\d+" || true)
-                if [ ! -z "$pid" ]; then
-                  kill -9 $pid || true
-                fi
-              fi
-              
-              # Try netstat as last resort
-              if command -v netstat >/dev/null 2>&1; then
-                pid=$(netstat -tlnp 2>/dev/null | grep ":3000" | awk "{print \$7}" | cut -d"/" -f1)
-                if [ ! -z "$pid" ]; then
-                  kill -9 $pid || true
-                fi
+              # Try direct process kill if we can find PID
+              pid=$(lsof -ti:3000 2>/dev/null || ss -lptn "sport = :3000" 2>/dev/null | grep -oP "(?<=pid=)\d+" || netstat -tlnp 2>/dev/null | grep ":3000" | awk "{print \$7}" | cut -d"/" -f1)
+              if [ ! -z "$pid" ]; then
+                echo "Found PID: $pid, attempting to kill..."
+                kill -9 $pid || true
               fi
             }
             
@@ -81,6 +79,10 @@ jobs:
             docker compose down --remove-orphans || true
             docker rm -f $(docker ps -aq) || true
             kill_port_3000
+            
+            # Debug: Verify port status
+            echo "Checking port status after cleanup..."
+            netstat -tulpn 2>/dev/null | grep :3000 || echo "Port 3000 appears to be free"
             
             # Wait for port to be released
             echo "Waiting for port to be released..."
@@ -113,6 +115,10 @@ jobs:
             for attempt in $(seq 1 3); do
               echo "Starting container (attempt $attempt)..."
               kill_port_3000
+              
+              echo "Checking port status before container start..."
+              netstat -tulpn 2>/dev/null | grep :3000 || echo "Port 3000 appears to be free"
+              
               sleep 5
               
               if IMAGE_TAG=$SHA docker compose up -d; then
