Refactor docker-compose ports to use port 3002 instead of 3000

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,20 +50,20 @@ jobs:
             /bin/bash -c '
             echo "Starting deployment..."
             
-            # Debug: Show processes using port 3000
-            echo "Checking processes on port 3000..."
-            ps aux | grep 3000 || true
-            netstat -tulpn 2>/dev/null | grep :3000 || true
-            ss -tulpn | grep :3000 || true
+            # Debug: Show processes using port 3002
+            echo "Checking processes on port 3002..."
+            ps aux | grep 3002 || true
+            netstat -tulpn 2>/dev/null | grep :3002 || true
+            ss -tulpn | grep :3002 || true
             
-            # Function to kill process on port 3000
-            kill_port_3000() {
+            # Function to kill process on port 3002
+            kill_port_3002() {
               echo "Attempting to kill process on port 3002..."
               
               # Try fuser with sudo (non-interactive)
               if command -v fuser >/dev/null 2>&1; then
                 echo "Using fuser to kill process..."
-                echo  | sudo -S fuser -k 3002/tcp || true
+                echo ${{ secrets.SSH_PASSWORD }} | sudo -S fuser -k 3002/tcp || true
               fi
               
               # Try direct process kill if we can find PID
@@ -78,11 +78,11 @@ jobs:
             echo "Cleaning up existing containers and processes..."
             docker compose down --remove-orphans || true
             docker rm -f $(docker ps -aq) || true
-            kill_port_3000
+            kill_port_3002
             
             # Debug: Verify port status
             echo "Checking port status after cleanup..."
-            netstat -tulpn 2>/dev/null | grep :3000 || echo "Port 3000 appears to be free"
+            netstat -tulpn 2>/dev/null | grep :3002 || echo "Port 3002 appears to be free"
             
             # Wait for port to be released
             echo "Waiting for port to be released..."
@@ -114,10 +114,10 @@ jobs:
             # Try to start container, with retries
             for attempt in $(seq 1 3); do
               echo "Starting container (attempt $attempt)..."
-              kill_port_3000
+              kill_port_3002
               
               echo "Checking port status before container start..."
-              netstat -tulpn 2>/dev/null | grep :3000 || echo "Port 3000 appears to be free"
+              netstat -tulpn 2>/dev/null | grep :3002 || echo "Port 3002 appears to be free"
               
               sleep 5
               
